<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/RlTitle"
        layout="@layout/title_common"/>

    <com.k12lib.afast.view.RecycleImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <com.k12app.view.CustomTextView
        android:id="@+id/mTvIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RlTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:drawablePadding="27dp"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="@dimen/sp_17"/>

    <com.k12app.view.CustomTextView
        android:id="@+id/mTvQQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mTvIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dip"
        android:text="@string/qq"
        android:visibility="gone"
        android:textSize="12sp"/>

    <com.k12app.view.CustomTextView
        android:id="@+id/mTvVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mTvQQ"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="版本"
        android:textSize="12sp"/>

    <com.k12app.view.CustomTextView
        android:id="@+id/txt_aboutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dip"
        android:text="@string/info_2"
        android:textSize="11sp"/>

    <com.k12app.view.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_aboutus"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dip"
        android:text="@string/info_1"
        android:textColor="@color/white"
        android:textSize="11sp"/>

</RelativeLayout>