<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/RlTitle"
        layout="@layout/title_common"/>

    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/RlTitle"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_pwd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_height="match_parent">

            <com.k12app.view.CustomTextView
                android:id="@+id/mTvTabPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="密码登录"
                android:textColor="@color/selector_gray_yellow"
                android:layout_centerInParent="true"
                android:textSize="@dimen/sp_17"/>

            <View
                android:id="@+id/mLinePwd"
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:layout_alignParentBottom="true"
                android:background="@color/yellow_FF6F0F"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_height="match_parent">

            <com.k12app.view.CustomTextView
                android:id="@+id/mTvTabCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="动态码登陆"
                android:textColor="@color/selector_gray_yellow"
                android:layout_centerInParent="true"
                android:textSize="@dimen/sp_17"/>

            <View
                android:id="@+id/mLineCode"
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:layout_alignParentBottom="true"
                android:background="@color/main_line_gray"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/ll_tab"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:scaleType="center"
                android:src="@mipmap/ic_login_phone"/>

            <com.k12app.view.CustomEditText
                android:id="@+id/editTxt_nickName"
                style="@style/NickEditStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="22dp"
                android:layout_toRightOf="@id/iv_nick"
                android:hint="@string/inputphone"
                android:maxLength="12"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/iv_nickName_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:background="@mipmap/btn_delete_up"
                android:visibility="gone"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/main_line_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mIvPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:scaleType="center"
                android:src="@mipmap/ic_login_pwd"/>

            <com.k12app.view.CustomTextView
                android:id="@+id/mTvGetVer"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="17dp"
                android:background="@drawable/btn_rectangle_gray"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:onClick="onClick"
                android:clickable="true"
                android:textColor="@color/red_f36b4b"
                android:text="@string/refresh_checkNum"
                android:visibility="gone"
                android:textSize="@dimen/sp_14"/>

            <com.k12app.view.CustomEditText
                android:id="@+id/mEtPwd"
                style="@style/NickEditStyle"
                android:hint="@string/inputpwd"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@id/mTvGetVer"
                android:layout_toRightOf="@+id/mIvPwd" />


            <ImageView
                android:id="@+id/iv_password_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/mEtPwd"
                android:layout_marginLeft="-30dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/btn_delete_up"
                android:visibility="gone"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/mEtPwd"
            android:background="@color/main_line_gray"/>

    </LinearLayout>

    <com.k12app.view.CustomButton
        android:id="@+id/btn_login"
        style="@style/btnYellow"
        android:layout_below="@id/ll_login"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/btn_login"/>

    <com.k12app.view.CustomTextView
        android:id="@+id/tv_resetpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/find_password"
        android:textSize="@dimen/sp_15"
        android:layout_below="@id/btn_login"
        android:textColor="@color/gray_2E2E2E"/>

    <com.k12app.view.CustomTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/register"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/sp_15"
        android:layout_below="@id/btn_login"
        android:textColor="@color/gray_2E2E2E"/>


</RelativeLayout>