<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/RlTitle"
        layout="@layout/title_common" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RlTitle"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/mRlPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_nick"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:scaleType="center"
                android:src="@mipmap/ic_login_phone" />

            <com.k12app.view.CustomEditText
                android:id="@+id/mEtPhone"
                style="@style/NickEditStyle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="22dp"
                android:layout_toRightOf="@id/iv_nick"
                android:textSize="15sp"
                android:hint="@string/inputphone"
                android:maxLength="11"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/iv_nickName_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:background="@mipmap/btn_delete_up"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/main_line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_password_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:scaleType="center"
                android:src="@mipmap/ic_login_code" />

            <com.k12app.view.CustomTextView
                android:id="@+id/mTvGetVer"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:background="@drawable/btn_rectangle_gray"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/refresh_checkNum"
                android:textColor="@color/red_f36b4b"
                android:textSize="@dimen/sp_14" />

            <com.k12app.view.CustomEditText
                android:id="@+id/mEtVer"
                style="@style/NickEditStyle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="15sp"
                android:layout_toLeftOf="@id/mTvGetVer"
                android:layout_toRightOf="@id/iv_password_icon"
                android:hint="@string/inputcode"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/iv_ver_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:layout_toLeftOf="@id/mTvGetVer"
                android:background="@mipmap/btn_delete_up"
                android:visibility="gone" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/main_line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_code"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="1dp"
                android:scaleType="center"
                android:src="@mipmap/ic_login_pwd" />

            <com.k12app.view.CustomEditText
                android:id="@+id/mEtPwd"
                style="@style/NickEditStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:layout_marginRight="22dp"
                android:layout_toRightOf="@id/iv_code"
                android:hint="@string/inputNewpwd"
                android:inputType="textPassword"
                android:maxLength="12"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/iv_pwd_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:background="@mipmap/btn_delete_up"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:layout_alignParentBottom="true"
                android:background="@color/main_line_gray" />


        </RelativeLayout>
    </LinearLayout>

    <com.k12app.view.CustomButton
        android:id="@+id/btn_pwd"
        style="@style/btnYellow"
        android:layout_below="@id/ll_login"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/forgetpwd"
        android:visibility="visible" />

</RelativeLayout>